# PROYECTO-INTEGRADOR-I

./: .firebaserc  README.md  firebase.json  pyproject.toml  rxconfig.py
.devcontainer/: devcontainer.json
.firebase/: hosting.UFJPWUVDVE9fSU5URUdSQURPUlwud2Vi.cache
.github/: action.yml
PROYECTO_INTEGRADOR/: rxconfig.py
PROYECTO_INTEGRADOR/PROYECTO_INTEGRADOR/: PROYECTO_INTEGRADOR.py
PROYECTO_INTEGRADOR/PROYECTO_INTEGRADOR/backend/: backend.py
PROYECTO_INTEGRADOR/PROYECTO_INTEGRADOR/views/: navbar.py  table.py
