[tool.poetry]
name = "proyecto integrador i"
version = "0.1.0"
description = "Simple app page where you can see the status of your customers' deliveries"
optional = false
python-versions = ">=3.8"


authors = ["JaryMontoya <jarycarolinam125@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JaryMontoya/PROYECTO-INTEGRADOR-1"

[package.dependencies]
Mako = "*"
SQLAlchemy = ">=1.3.0"
typing-extensions = ">=4"

[tool.poetry.dependencies]
python-= "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
